--- a/index.html
+++ b/index.html
@@ -36,4 +36,5 @@
         </div>
     </div>
     <script src="https://kit.fontawesome.com/680d390181.js" crossorigin="anonymous"></script>
+    </body>
 </html>
