--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="https://akgunxt.github.io/port">HOME</a></li>
                 <li><a href="https://akgunxt.github.io/emirakgun/about.html">ABOUT</a></li>
                 <li><a href="https://akgunxt.github.io/emirakgun">WEBSITE</a></li>
-                <li><a href="https://t.me/j.spoidos">TELEGRAM</a></li>
+                <li><a href="http://t.me/j.spoidos">TELEGRAM</a></li>
             </ul>
         </nav>
         <div class="detel">
